ThirdParty/mojoshader/unit_tests/preprocessor/errors/redefinition-file.correct
preprocessor/errors/redefinition-file:2: ERROR: '__FILE__' already defined
